@@ -3,70 +3,62 @@ package com.doziem.jamTesSystem.service.userService;
 import com.doziem.jamTesSystem.dto.UserDto;
 import com.doziem.jamTesSystem.model.User;
 import com.doziem.jamTesSystem.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
-public class UserServiceImpl  implements IUserService {
+@RequiredArgsConstructor
+public class UserServiceImpl implements IUserService {
 
-    @Autowired
     private final UserRepository userRepository;
-
     private final BCryptPasswordEncoder passwordEncoder;
 
-    public UserServiceImpl(BCryptPasswordEncoder passwordEncoder,UserRepository userRepository) {
-        this.passwordEncoder = passwordEncoder;
-        this.userRepository = userRepository;
-    }
-
-    // Create User
     @Override
     public UserDto createUser(UserDto dto) {
-        User user = UserDto.mapToEntity(dto, dto.getPassword(), passwordEncoder);
-        User savedUser = userRepository.save(user);
-        return UserDto.mapToDTO(savedUser);
-    }
+        if (dto == null || dto.getPassword() == null || dto.getPassword().isBlank()) {
+            throw new IllegalArgumentException("Password is required");
+        }
 
+        User user = UserDto.mapToEntity(dto, dto.getPassword(), passwordEncoder);
+        return UserDto.mapToDTO(userRepository.save(user));
+    }
 
     @Override
     public List<UserDto> getAllUsers() {
-        return userRepository.findAll()
-                .stream().map(UserDto::mapToDTO)
-                .collect(Collectors.toList());
+        return userRepository.findAll().stream()
+                .map(UserDto::mapToDTO)
+                .toList();
     }
 
     @Override
-    public Optional<UserDto> getUserById(UUID id) {
+    public Optional<UserDto> getUserById(String id) {
         return userRepository.findById(id).map(UserDto::mapToDTO);
     }
 
     @Override
-    public Optional<UserDto> updateUser(UUID id, UserDto dto, String password) {
+    public Optional<UserDto> updateUser(String id, UserDto dto, String password) {
         return userRepository.findById(id).map(user -> {
-            user.setName(dto.getName());
-            user.setEmail(dto.getEmail());
-            user.setRole(dto.getRole());  // Directly using Role enum
-            user.setActive(dto.isActive());
-            if (password != null && !password.isEmpty()) {
+            if (dto.getName() != null) user.setName(dto.getName());
+            if (dto.getEmail() != null) user.setEmail(dto.getEmail());
+            if (dto.getRole() != null) user.setRole(dto.getRole());
+            if (dto.getPhone() != null) user.setPhone(dto.getPhone());
+            if (dto.isActive() != user.isActive()) user.setActive(dto.isActive());
+            if (password != null && !password.isBlank()) {
                 user.setPassword(passwordEncoder.encode(password));
             }
-            User updatedUser = userRepository.save(user);
-            return UserDto.mapToDTO(updatedUser);
+            return UserDto.mapToDTO(userRepository.save(user));
         });
     }
 
     @Override
-    public Optional<String> deleteUser(UUID id) {
+    public Optional<String> deleteUser(String id) {
         return userRepository.findById(id).map(user -> {
             userRepository.deleteById(id);
-            return Optional.of("User deleted successfully.");
-        }).orElse(Optional.empty());
+            return "User deleted successfully.";
+        });
     }
-
 }
